--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  padding: 16px;
   font-family: sans-serif;
+  background: black;
 }
 a {
   text-decoration: none;
@@ -9,4 +9,24 @@ a {
 }
 a:hover {
   text-decoration: underline;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  background: rgba(255, 255, 255, 0.2);
+  height: 2px;
+  outline: none;
+  margin: 2em 0;
+  display: block;
+  width: 100%;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 20px;
+  border: none;
+  border-radius: 1000px;
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.2);
 }
